// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EnvVisualizer calculates correct layout for code sample 0 1`] = `
Object {
  "head": Object {
    ":::pre-declared names::": Symbol(),
  },
  "id": Any<String>,
  "name": "global",
  "tail": null,
}
`;

exports[`EnvVisualizer calculates correct layout for code sample 0 2`] = `
Object {
  "head": Object {
    "3": [Function],
    "4": [Function],
    "5": [Function],
    "6": [Function],
    "7": [Function],
    "8": [Function],
    "9": [Function],
    "fn": [Function],
    "x": Array [
      "long string",
      Array [
        [Function],
        [Function],
      ],
      Array [
        1,
        Array [
          Array [
            2,
            3,
          ],
          Array [
            [Function],
            null,
          ],
        ],
      ],
      [Function],
      5,
      6,
    ],
    "y": Array [
      Array [
        [Function],
        [Function],
      ],
      Array [
        Array [
          1,
          Array [
            Array [
              2,
              3,
            ],
            Array [
              [Function],
              null,
            ],
          ],
        ],
        Array [
          [Function],
          Array [
            Array [
              Array [
                2,
                3,
              ],
              Array [
                [Function],
                null,
              ],
            ],
            Array [
              [Function],
              null,
            ],
          ],
        ],
      ],
    ],
  },
  "id": Any<String>,
  "name": "programEnvironment",
  "tail": Object {
    "head": Object {
      "$accumulate": [Function],
      "$append": [Function],
      "$build_list": [Function],
      "$enum_list": [Function],
      "$filter": [Function],
      "$length": [Function],
      "$list_to_string": [Function],
      "$map": [Function],
      "$remove": [Function],
      "$remove_all": [Function],
      "$reverse": [Function],
      "accumulate": [Function],
      "append": [Function],
      "build_list": [Function],
      "build_stream": [Function],
      "enum_list": [Function],
      "enum_stream": [Function],
      "equal": [Function],
      "eval_stream": [Function],
      "filter": [Function],
      "for_each": [Function],
      "integers_from": [Function],
      "is_stream": [Function],
      "length": [Function],
      "list_ref": [Function],
      "list_to_stream": [Function],
      "list_to_string": [Function],
      "map": [Function],
      "member": [Function],
      "remove": [Function],
      "remove_all": [Function],
      "reverse": [Function],
      "stream_append": [Function],
      "stream_filter": [Function],
      "stream_for_each": [Function],
      "stream_length": [Function],
      "stream_map": [Function],
      "stream_member": [Function],
      "stream_ref": [Function],
      "stream_remove": [Function],
      "stream_remove_all": [Function],
      "stream_reverse": [Function],
      "stream_to_list": [Function],
    },
    "id": "1",
    "name": "programEnvironment",
    "tail": Object {
      "head": Object {
        ":::pre-declared names::": Symbol(),
      },
      "id": "-1",
      "name": "global",
      "tail": null,
    },
  },
}
`;

exports[`EnvVisualizer calculates correct layout for code sample 0 3`] = `
Array [
  0,
  0,
  ":::pre-declared names::: ",
  Symbol(),
  0,
  1,
  "fn:= ",
  [Function],
  "x:= ",
  Array [
    "long string",
    Array [
      [Function],
      [Function],
    ],
    Array [
      1,
      Array [
        Array [
          2,
          3,
        ],
        Array [
          [Function],
          null,
        ],
      ],
    ],
    [Function],
    5,
    6,
  ],
  "y:= ",
  Array [
    Array [
      [Function],
      [Function],
    ],
    Array [
      Array [
        1,
        Array [
          Array [
            2,
            3,
          ],
          Array [
            [Function],
            null,
          ],
        ],
      ],
      Array [
        [Function],
        Array [
          Array [
            Array [
              2,
              3,
            ],
            Array [
              [Function],
              null,
            ],
          ],
          Array [
            [Function],
            null,
          ],
        ],
      ],
    ],
  ],
  "4:= ",
  [Function],
  "5:= ",
  [Function],
  "6:= ",
  [Function],
  "7:= ",
  [Function],
]
`;

exports[`EnvVisualizer calculates correct layout for code sample 1 1`] = `
Object {
  "head": Object {
    ":::pre-declared names::": Symbol(),
  },
  "id": Any<String>,
  "name": "global",
  "tail": null,
}
`;

exports[`EnvVisualizer calculates correct layout for code sample 1 2`] = `
Object {
  "head": Object {
    "12": [Function],
    "13": [Function],
    "14": [Function],
    "15": [Function],
    "fn": [Function],
    "l": Array [
      1,
      Array [
        Array [
          Array [
            1,
            Array [
              2,
              Array [
                3,
                Array [
                  [Function],
                  null,
                ],
              ],
            ],
          ],
          Array [
            Array [
              Array [
                1,
                2,
              ],
              3,
            ],
            Array [
              Array [
                1,
                Array [
                  1,
                  2,
                ],
                [Function],
                4,
                5,
              ],
              Array [
                4,
                null,
              ],
            ],
          ],
        ],
        Array [
          [Function],
          Array [
            Array [
              1,
              Array [
                Array [
                  1,
                  2,
                ],
                3,
              ],
              4,
            ],
            null,
          ],
        ],
      ],
    ],
    "x": Array [
      1,
      Array [
        Array [
          1,
          2,
        ],
        3,
      ],
      4,
    ],
  },
  "id": Any<String>,
  "name": "programEnvironment",
  "tail": Object {
    "head": Object {
      "$accumulate": [Function],
      "$append": [Function],
      "$build_list": [Function],
      "$enum_list": [Function],
      "$filter": [Function],
      "$length": [Function],
      "$list_to_string": [Function],
      "$map": [Function],
      "$remove": [Function],
      "$remove_all": [Function],
      "$reverse": [Function],
      "accumulate": [Function],
      "append": [Function],
      "build_list": [Function],
      "build_stream": [Function],
      "enum_list": [Function],
      "enum_stream": [Function],
      "equal": [Function],
      "eval_stream": [Function],
      "filter": [Function],
      "for_each": [Function],
      "integers_from": [Function],
      "is_stream": [Function],
      "length": [Function],
      "list_ref": [Function],
      "list_to_stream": [Function],
      "list_to_string": [Function],
      "map": [Function],
      "member": [Function],
      "remove": [Function],
      "remove_all": [Function],
      "reverse": [Function],
      "stream_append": [Function],
      "stream_filter": [Function],
      "stream_for_each": [Function],
      "stream_length": [Function],
      "stream_map": [Function],
      "stream_member": [Function],
      "stream_ref": [Function],
      "stream_remove": [Function],
      "stream_remove_all": [Function],
      "stream_reverse": [Function],
      "stream_to_list": [Function],
    },
    "id": "10",
    "name": "programEnvironment",
    "tail": Object {
      "head": Object {
        ":::pre-declared names::": Symbol(),
      },
      "id": "-1",
      "name": "global",
      "tail": null,
    },
  },
}
`;

exports[`EnvVisualizer calculates correct layout for code sample 1 3`] = `
Array [
  0,
  0,
  ":::pre-declared names::: ",
  Symbol(),
  0,
  1,
  "fn:= ",
  [Function],
  "x:= ",
  Array [
    1,
    Array [
      Array [
        1,
        2,
      ],
      3,
    ],
    4,
  ],
  "l:= ",
  Array [
    1,
    Array [
      Array [
        Array [
          1,
          Array [
            2,
            Array [
              3,
              Array [
                [Function],
                null,
              ],
            ],
          ],
        ],
        Array [
          Array [
            Array [
              1,
              2,
            ],
            3,
          ],
          Array [
            Array [
              1,
              Array [
                1,
                2,
              ],
              [Function],
              4,
              5,
            ],
            Array [
              4,
              null,
            ],
          ],
        ],
      ],
      Array [
        [Function],
        Array [
          Array [
            1,
            Array [
              Array [
                1,
                2,
              ],
              3,
            ],
            4,
          ],
          null,
        ],
      ],
    ],
  ],
  "15:= ",
  [Function],
]
`;

exports[`EnvVisualizer calculates correct layout for code sample 2 1`] = `
Object {
  "head": Object {
    ":::pre-declared names::": Symbol(),
  },
  "id": Any<String>,
  "name": "global",
  "tail": null,
}
`;

exports[`EnvVisualizer calculates correct layout for code sample 2 2`] = `
Object {
  "head": Object {
    "x1": Array [
      1,
      Array [
        2,
        Array [
          3,
          Array [
            [Circular],
            null,
          ],
        ],
      ],
    ],
    "x2": Array [
      3,
      Array [
        Array [
          1,
          Array [
            2,
            [Circular],
          ],
        ],
        null,
      ],
    ],
  },
  "id": Any<String>,
  "name": "programEnvironment",
  "tail": Object {
    "head": Object {
      "$accumulate": [Function],
      "$append": [Function],
      "$build_list": [Function],
      "$enum_list": [Function],
      "$filter": [Function],
      "$length": [Function],
      "$list_to_string": [Function],
      "$map": [Function],
      "$remove": [Function],
      "$remove_all": [Function],
      "$reverse": [Function],
      "accumulate": [Function],
      "append": [Function],
      "build_list": [Function],
      "build_stream": [Function],
      "enum_list": [Function],
      "enum_stream": [Function],
      "equal": [Function],
      "eval_stream": [Function],
      "filter": [Function],
      "for_each": [Function],
      "integers_from": [Function],
      "is_stream": [Function],
      "length": [Function],
      "list_ref": [Function],
      "list_to_stream": [Function],
      "list_to_string": [Function],
      "map": [Function],
      "member": [Function],
      "remove": [Function],
      "remove_all": [Function],
      "reverse": [Function],
      "stream_append": [Function],
      "stream_filter": [Function],
      "stream_for_each": [Function],
      "stream_length": [Function],
      "stream_map": [Function],
      "stream_member": [Function],
      "stream_ref": [Function],
      "stream_remove": [Function],
      "stream_remove_all": [Function],
      "stream_reverse": [Function],
      "stream_to_list": [Function],
    },
    "id": "16",
    "name": "programEnvironment",
    "tail": Object {
      "head": Object {
        ":::pre-declared names::": Symbol(),
      },
      "id": "-1",
      "name": "global",
      "tail": null,
    },
  },
}
`;

exports[`EnvVisualizer calculates correct layout for code sample 2 3`] = `
Array [
  0,
  0,
  ":::pre-declared names::: ",
  Symbol(),
  0,
  1,
  "x1:= ",
  Array [
    1,
    Array [
      2,
      Array [
        3,
        Array [
          [Circular],
          null,
        ],
      ],
    ],
  ],
  "x2:= ",
  Array [
    3,
    Array [
      Array [
        1,
        Array [
          2,
          [Circular],
        ],
      ],
      null,
    ],
  ],
]
`;

exports[`EnvVisualizer calculates correct layout for code sample 3 1`] = `
Object {
  "head": Object {
    ":::pre-declared names::": Symbol(),
  },
  "id": Any<String>,
  "name": "global",
  "tail": null,
}
`;

exports[`EnvVisualizer calculates correct layout for code sample 3 2`] = `
Object {
  "head": Object {
    "20": [Function],
    "21": [Function],
    "e": Array [
      Array [
        3,
        Array [
          4,
          Array [
            5,
            null,
          ],
        ],
      ],
      Array [
        2,
        Array [
          Array [
            3,
            Array [
              4,
              Array [
                5,
                null,
              ],
            ],
          ],
          null,
        ],
      ],
    ],
    "f": Array [
      1,
      2,
    ],
    "g": Array [
      Array [
        [Function],
        Array [
          4,
          Array [
            5,
            null,
          ],
        ],
      ],
      Array [
        2,
        Array [
          Array [
            [Function],
            Array [
              4,
              Array [
                5,
                null,
              ],
            ],
          ],
          null,
        ],
      ],
    ],
    "y": Array [
      Array [
        1,
        2,
      ],
      Array [
        [Function],
        Array [
          1,
          2,
        ],
      ],
    ],
  },
  "id": Any<String>,
  "name": "programEnvironment",
  "tail": Object {
    "head": Object {
      "$accumulate": [Function],
      "$append": [Function],
      "$build_list": [Function],
      "$enum_list": [Function],
      "$filter": [Function],
      "$length": [Function],
      "$list_to_string": [Function],
      "$map": [Function],
      "$remove": [Function],
      "$remove_all": [Function],
      "$reverse": [Function],
      "accumulate": [Function],
      "append": [Function],
      "build_list": [Function],
      "build_stream": [Function],
      "enum_list": [Function],
      "enum_stream": [Function],
      "equal": [Function],
      "eval_stream": [Function],
      "filter": [Function],
      "for_each": [Function],
      "integers_from": [Function],
      "is_stream": [Function],
      "length": [Function],
      "list_ref": [Function],
      "list_to_stream": [Function],
      "list_to_string": [Function],
      "map": [Function],
      "member": [Function],
      "remove": [Function],
      "remove_all": [Function],
      "reverse": [Function],
      "stream_append": [Function],
      "stream_filter": [Function],
      "stream_for_each": [Function],
      "stream_length": [Function],
      "stream_map": [Function],
      "stream_member": [Function],
      "stream_ref": [Function],
      "stream_remove": [Function],
      "stream_remove_all": [Function],
      "stream_reverse": [Function],
      "stream_to_list": [Function],
    },
    "id": "18",
    "name": "programEnvironment",
    "tail": Object {
      "head": Object {
        ":::pre-declared names::": Symbol(),
      },
      "id": "-1",
      "name": "global",
      "tail": null,
    },
  },
}
`;

exports[`EnvVisualizer calculates correct layout for code sample 3 3`] = `
Array [
  0,
  0,
  ":::pre-declared names::: ",
  Symbol(),
  0,
  1,
  "e:= ",
  Array [
    Array [
      3,
      Array [
        4,
        Array [
          5,
          null,
        ],
      ],
    ],
    Array [
      2,
      Array [
        Array [
          3,
          Array [
            4,
            Array [
              5,
              null,
            ],
          ],
        ],
        null,
      ],
    ],
  ],
  "f:= ",
  Array [
    1,
    2,
  ],
  "g:= ",
  Array [
    Array [
      [Function],
      Array [
        4,
        Array [
          5,
          null,
        ],
      ],
    ],
    Array [
      2,
      Array [
        Array [
          [Function],
          Array [
            4,
            Array [
              5,
              null,
            ],
          ],
        ],
        null,
      ],
    ],
  ],
  "y:= ",
  Array [
    Array [
      1,
      2,
    ],
    Array [
      [Function],
      Array [
        1,
        2,
      ],
    ],
  ],
  "20:= ",
  [Function],
  "21:= ",
  [Function],
]
`;

exports[`EnvVisualizer calculates correct layout for code sample 4 1`] = `
Object {
  "head": Object {
    ":::pre-declared names::": Symbol(),
  },
  "id": Any<String>,
  "name": "global",
  "tail": null,
}
`;

exports[`EnvVisualizer calculates correct layout for code sample 4 2`] = `
Object {
  "head": Object {
    "24": [Function],
    "28": [Function],
    "f": [Function],
    "x": 0,
    "y": 10,
    "z": [Function],
  },
  "id": Any<String>,
  "name": "programEnvironment",
  "tail": Object {
    "head": Object {
      "$accumulate": [Function],
      "$append": [Function],
      "$build_list": [Function],
      "$enum_list": [Function],
      "$filter": [Function],
      "$length": [Function],
      "$list_to_string": [Function],
      "$map": [Function],
      "$remove": [Function],
      "$remove_all": [Function],
      "$reverse": [Function],
      "accumulate": [Function],
      "append": [Function],
      "build_list": [Function],
      "build_stream": [Function],
      "enum_list": [Function],
      "enum_stream": [Function],
      "equal": [Function],
      "eval_stream": [Function],
      "filter": [Function],
      "for_each": [Function],
      "integers_from": [Function],
      "is_stream": [Function],
      "length": [Function],
      "list_ref": [Function],
      "list_to_stream": [Function],
      "list_to_string": [Function],
      "map": [Function],
      "member": [Function],
      "remove": [Function],
      "remove_all": [Function],
      "reverse": [Function],
      "stream_append": [Function],
      "stream_filter": [Function],
      "stream_for_each": [Function],
      "stream_length": [Function],
      "stream_map": [Function],
      "stream_member": [Function],
      "stream_ref": [Function],
      "stream_remove": [Function],
      "stream_remove_all": [Function],
      "stream_reverse": [Function],
      "stream_to_list": [Function],
    },
    "id": "22",
    "name": "programEnvironment",
    "tail": Object {
      "head": Object {
        ":::pre-declared names::": Symbol(),
      },
      "id": "-1",
      "name": "global",
      "tail": null,
    },
  },
}
`;

exports[`EnvVisualizer calculates correct layout for code sample 4 3`] = `
Object {
  "callExpression": Object {
    "arguments": Array [
      Object {
        "loc": undefined,
        "type": "Literal",
        "value": 11,
      },
    ],
    "callee": Node {
      "end": 97,
      "loc": SourceLocation {
        "end": Position {
          "column": 15,
          "line": 7,
        },
        "start": Position {
          "column": 14,
          "line": 7,
        },
      },
      "name": "f",
      "start": 96,
      "type": "Identifier",
    },
    "end": 101,
    "loc": SourceLocation {
      "end": Position {
        "column": 19,
        "line": 7,
      },
      "start": Position {
        "column": 14,
        "line": 7,
      },
    },
    "start": 96,
    "type": "CallExpression",
  },
  "head": Object {
    "27": [Function],
    "x": 11,
  },
  "id": Any<String>,
  "name": "f",
  "tail": Object {
    "head": Object {
      "24": [Function],
      "28": [Function],
      "f": [Function],
      "x": 0,
      "y": 10,
      "z": [Function],
    },
    "id": "23",
    "name": "programEnvironment",
    "tail": Object {
      "head": Object {
        "$accumulate": [Function],
        "$append": [Function],
        "$build_list": [Function],
        "$enum_list": [Function],
        "$filter": [Function],
        "$length": [Function],
        "$list_to_string": [Function],
        "$map": [Function],
        "$remove": [Function],
        "$remove_all": [Function],
        "$reverse": [Function],
        "accumulate": [Function],
        "append": [Function],
        "build_list": [Function],
        "build_stream": [Function],
        "enum_list": [Function],
        "enum_stream": [Function],
        "equal": [Function],
        "eval_stream": [Function],
        "filter": [Function],
        "for_each": [Function],
        "integers_from": [Function],
        "is_stream": [Function],
        "length": [Function],
        "list_ref": [Function],
        "list_to_stream": [Function],
        "list_to_string": [Function],
        "map": [Function],
        "member": [Function],
        "remove": [Function],
        "remove_all": [Function],
        "reverse": [Function],
        "stream_append": [Function],
        "stream_filter": [Function],
        "stream_for_each": [Function],
        "stream_length": [Function],
        "stream_map": [Function],
        "stream_member": [Function],
        "stream_ref": [Function],
        "stream_remove": [Function],
        "stream_remove_all": [Function],
        "stream_reverse": [Function],
        "stream_to_list": [Function],
      },
      "id": "22",
      "name": "programEnvironment",
      "tail": Object {
        "head": Object {
          ":::pre-declared names::": Symbol(),
        },
        "id": "-1",
        "name": "global",
        "tail": null,
      },
    },
  },
}
`;

exports[`EnvVisualizer calculates correct layout for code sample 4 4`] = `
Array [
  0,
  0,
  ":::pre-declared names::: ",
  Symbol(),
  0,
  1,
  "x: ",
  0,
  "y: ",
  10,
  "f:= ",
  [Function],
  "z:= ",
  [Function],
  0,
  2,
  "x: ",
  11,
  "27:= ",
  [Function],
]
`;

exports[`EnvVisualizer calculates correct layout for code sample 5 1`] = `
Object {
  "head": Object {
    ":::pre-declared names::": Symbol(),
    "accumulate": [Function],
    "pair": [Function],
  },
  "id": Any<String>,
  "name": "global",
  "tail": null,
}
`;

exports[`EnvVisualizer calculates correct layout for code sample 5 2`] = `
Object {
  "head": Object {
    "31": [Function],
    "x": Array [
      1,
      Array [
        [Function],
        Array [
          [Function],
          null,
        ],
      ],
    ],
  },
  "id": Any<String>,
  "name": "programEnvironment",
  "tail": Object {
    "head": Object {
      "$accumulate": [Function],
      "$append": [Function],
      "$build_list": [Function],
      "$enum_list": [Function],
      "$filter": [Function],
      "$length": [Function],
      "$list_to_string": [Function],
      "$map": [Function],
      "$remove": [Function],
      "$remove_all": [Function],
      "$reverse": [Function],
      "accumulate": [Function],
      "append": [Function],
      "build_list": [Function],
      "build_stream": [Function],
      "enum_list": [Function],
      "enum_stream": [Function],
      "equal": [Function],
      "eval_stream": [Function],
      "filter": [Function],
      "for_each": [Function],
      "integers_from": [Function],
      "is_stream": [Function],
      "length": [Function],
      "list_ref": [Function],
      "list_to_stream": [Function],
      "list_to_string": [Function],
      "map": [Function],
      "member": [Function],
      "remove": [Function],
      "remove_all": [Function],
      "reverse": [Function],
      "stream_append": [Function],
      "stream_filter": [Function],
      "stream_for_each": [Function],
      "stream_length": [Function],
      "stream_map": [Function],
      "stream_member": [Function],
      "stream_ref": [Function],
      "stream_remove": [Function],
      "stream_remove_all": [Function],
      "stream_reverse": [Function],
      "stream_to_list": [Function],
    },
    "id": "29",
    "name": "programEnvironment",
    "tail": Object {
      "head": Object {
        ":::pre-declared names::": Symbol(),
        "accumulate": [Function],
        "pair": [Function],
      },
      "id": "-1",
      "name": "global",
      "tail": null,
    },
  },
}
`;

exports[`EnvVisualizer calculates correct layout for code sample 5 3`] = `
Array [
  0,
  0,
  ":::pre-declared names::: ",
  Symbol(),
  "accumulate: ",
  [Function],
  "pair: ",
  [Function],
  0,
  1,
  "x:= ",
  Array [
    1,
    Array [
      [Function],
      Array [
        [Function],
        null,
      ],
    ],
  ],
]
`;

exports[`EnvVisualizer calculates correct layout for code sample 6 1`] = `
Object {
  "head": Object {
    ":::pre-declared names::": Symbol(),
  },
  "id": Any<String>,
  "name": "global",
  "tail": null,
}
`;

exports[`EnvVisualizer calculates correct layout for code sample 6 2`] = `
Object {
  "head": Object {
    "x": Array [],
  },
  "id": Any<String>,
  "name": "programEnvironment",
  "tail": Object {
    "head": Object {
      "$accumulate": [Function],
      "$append": [Function],
      "$build_list": [Function],
      "$enum_list": [Function],
      "$filter": [Function],
      "$length": [Function],
      "$list_to_string": [Function],
      "$map": [Function],
      "$remove": [Function],
      "$remove_all": [Function],
      "$reverse": [Function],
      "accumulate": [Function],
      "append": [Function],
      "build_list": [Function],
      "build_stream": [Function],
      "enum_list": [Function],
      "enum_stream": [Function],
      "equal": [Function],
      "eval_stream": [Function],
      "filter": [Function],
      "for_each": [Function],
      "integers_from": [Function],
      "is_stream": [Function],
      "length": [Function],
      "list_ref": [Function],
      "list_to_stream": [Function],
      "list_to_string": [Function],
      "map": [Function],
      "member": [Function],
      "remove": [Function],
      "remove_all": [Function],
      "reverse": [Function],
      "stream_append": [Function],
      "stream_filter": [Function],
      "stream_for_each": [Function],
      "stream_length": [Function],
      "stream_map": [Function],
      "stream_member": [Function],
      "stream_ref": [Function],
      "stream_remove": [Function],
      "stream_remove_all": [Function],
      "stream_reverse": [Function],
      "stream_to_list": [Function],
    },
    "id": "32",
    "name": "programEnvironment",
    "tail": Object {
      "head": Object {
        ":::pre-declared names::": Symbol(),
      },
      "id": "-1",
      "name": "global",
      "tail": null,
    },
  },
}
`;

exports[`EnvVisualizer calculates correct layout for code sample 6 3`] = `
Array [
  0,
  0,
  ":::pre-declared names::: ",
  Symbol(),
  0,
  1,
  "x:= ",
  Array [],
]
`;

exports[`EnvVisualizer calculates correct layout for code sample 7 1`] = `
Object {
  "head": Object {
    ":::pre-declared names::": Symbol(),
    "integers_from": [Function],
  },
  "id": Any<String>,
  "name": "global",
  "tail": null,
}
`;

exports[`EnvVisualizer calculates correct layout for code sample 7 2`] = `
Object {
  "head": Object {
    "45": [Function],
    "46": [Function],
    "eval_stream": [Function],
    "x": Symbol(Used to implement hoisting),
    "y": Array [
      [Circular],
      Array [
        1,
        [Circular],
        [Circular],
      ],
    ],
  },
  "id": Any<String>,
  "name": "programEnvironment",
  "tail": Object {
    "head": Object {
      "$accumulate": [Function],
      "$append": [Function],
      "$build_list": [Function],
      "$enum_list": [Function],
      "$filter": [Function],
      "$length": [Function],
      "$list_to_string": [Function],
      "$map": [Function],
      "$remove": [Function],
      "$remove_all": [Function],
      "$reverse": [Function],
      "accumulate": [Function],
      "append": [Function],
      "build_list": [Function],
      "build_stream": [Function],
      "enum_list": [Function],
      "enum_stream": [Function],
      "equal": [Function],
      "eval_stream": [Function],
      "filter": [Function],
      "for_each": [Function],
      "integers_from": [Function],
      "is_stream": [Function],
      "length": [Function],
      "list_ref": [Function],
      "list_to_stream": [Function],
      "list_to_string": [Function],
      "map": [Function],
      "member": [Function],
      "remove": [Function],
      "remove_all": [Function],
      "reverse": [Function],
      "stream_append": [Function],
      "stream_filter": [Function],
      "stream_for_each": [Function],
      "stream_length": [Function],
      "stream_map": [Function],
      "stream_member": [Function],
      "stream_ref": [Function],
      "stream_remove": [Function],
      "stream_remove_all": [Function],
      "stream_reverse": [Function],
      "stream_to_list": [Function],
    },
    "id": "34",
    "name": "programEnvironment",
    "tail": Object {
      "head": Object {
        ":::pre-declared names::": Symbol(),
        "integers_from": [Function],
      },
      "id": "-1",
      "name": "global",
      "tail": null,
    },
  },
}
`;

exports[`EnvVisualizer calculates correct layout for code sample 7 3`] = `
Object {
  "callExpression": Object {
    "arguments": Array [
      Object {
        "loc": undefined,
        "type": "Literal",
        "value": 1,
      },
    ],
    "callee": Node {
      "end": 457,
      "loc": SourceLocation {
        "end": Position {
          "column": 29,
          "line": 17,
        },
        "start": Position {
          "column": 16,
          "line": 17,
        },
      },
      "name": "integers_from",
      "start": 444,
      "type": "Identifier",
    },
    "end": 460,
    "loc": SourceLocation {
      "end": Position {
        "column": 32,
        "line": 17,
      },
      "start": Position {
        "column": 16,
        "line": 17,
      },
    },
    "start": 444,
    "type": "CallExpression",
  },
  "head": Object {
    "49": [Function],
    "58": [Function],
    "n": 1,
  },
  "id": Any<String>,
  "name": "integers_from",
  "tail": Object {
    "head": Object {
      "$accumulate": [Function],
      "$append": [Function],
      "$build_list": [Function],
      "$enum_list": [Function],
      "$filter": [Function],
      "$length": [Function],
      "$list_to_string": [Function],
      "$map": [Function],
      "$remove": [Function],
      "$remove_all": [Function],
      "$reverse": [Function],
      "accumulate": [Function],
      "append": [Function],
      "build_list": [Function],
      "build_stream": [Function],
      "enum_list": [Function],
      "enum_stream": [Function],
      "equal": [Function],
      "eval_stream": [Function],
      "filter": [Function],
      "for_each": [Function],
      "integers_from": [Function],
      "is_stream": [Function],
      "length": [Function],
      "list_ref": [Function],
      "list_to_stream": [Function],
      "list_to_string": [Function],
      "map": [Function],
      "member": [Function],
      "remove": [Function],
      "remove_all": [Function],
      "reverse": [Function],
      "stream_append": [Function],
      "stream_filter": [Function],
      "stream_for_each": [Function],
      "stream_length": [Function],
      "stream_map": [Function],
      "stream_member": [Function],
      "stream_ref": [Function],
      "stream_remove": [Function],
      "stream_remove_all": [Function],
      "stream_reverse": [Function],
      "stream_to_list": [Function],
    },
    "id": "34",
    "name": "programEnvironment",
    "tail": Object {
      "head": Object {
        ":::pre-declared names::": Symbol(),
        "integers_from": [Function],
      },
      "id": "-1",
      "name": "global",
      "tail": null,
    },
  },
}
`;

exports[`EnvVisualizer calculates correct layout for code sample 7 4`] = `
Object {
  "callExpression": Object {
    "arguments": Array [
      Object {
        "loc": undefined,
        "type": "Literal",
        "value": 2,
      },
    ],
    "callee": Node {
      "end": 12709,
      "loc": SourceLocation {
        "end": Position {
          "column": 23,
          "line": 427,
        },
        "start": Position {
          "column": 10,
          "line": 427,
        },
      },
      "name": "integers_from",
      "start": 12696,
      "type": "Identifier",
    },
    "end": 12716,
    "loc": SourceLocation {
      "end": Position {
        "column": 30,
        "line": 427,
      },
      "start": Position {
        "column": 10,
        "line": 427,
      },
    },
    "start": 12696,
    "type": "CallExpression",
  },
  "head": Object {
    "61": [Function],
    "n": 2,
  },
  "id": Any<String>,
  "name": "integers_from",
  "tail": Object {
    "head": Object {
      "$accumulate": [Function],
      "$append": [Function],
      "$build_list": [Function],
      "$enum_list": [Function],
      "$filter": [Function],
      "$length": [Function],
      "$list_to_string": [Function],
      "$map": [Function],
      "$remove": [Function],
      "$remove_all": [Function],
      "$reverse": [Function],
      "accumulate": [Function],
      "append": [Function],
      "build_list": [Function],
      "build_stream": [Function],
      "enum_list": [Function],
      "enum_stream": [Function],
      "equal": [Function],
      "eval_stream": [Function],
      "filter": [Function],
      "for_each": [Function],
      "integers_from": [Function],
      "is_stream": [Function],
      "length": [Function],
      "list_ref": [Function],
      "list_to_stream": [Function],
      "list_to_string": [Function],
      "map": [Function],
      "member": [Function],
      "remove": [Function],
      "remove_all": [Function],
      "reverse": [Function],
      "stream_append": [Function],
      "stream_filter": [Function],
      "stream_for_each": [Function],
      "stream_length": [Function],
      "stream_map": [Function],
      "stream_member": [Function],
      "stream_ref": [Function],
      "stream_remove": [Function],
      "stream_remove_all": [Function],
      "stream_reverse": [Function],
      "stream_to_list": [Function],
    },
    "id": "34",
    "name": "programEnvironment",
    "tail": Object {
      "head": Object {
        ":::pre-declared names::": Symbol(),
        "integers_from": [Function],
      },
      "id": "-1",
      "name": "global",
      "tail": null,
    },
  },
}
`;

exports[`EnvVisualizer calculates correct layout for code sample 7 5`] = `
Object {
  "head": Object {
    "i": 5,
  },
  "id": Any<String>,
  "name": "forLoopEnvironment",
  "tail": Object {
    "head": Object {
      "45": [Function],
      "46": [Function],
      "eval_stream": [Function],
      "x": Symbol(Used to implement hoisting),
      "y": Array [
        [Circular],
        Array [
          1,
          [Circular],
          [Circular],
        ],
      ],
    },
    "id": "35",
    "name": "programEnvironment",
    "tail": Object {
      "head": Object {
        "$accumulate": [Function],
        "$append": [Function],
        "$build_list": [Function],
        "$enum_list": [Function],
        "$filter": [Function],
        "$length": [Function],
        "$list_to_string": [Function],
        "$map": [Function],
        "$remove": [Function],
        "$remove_all": [Function],
        "$reverse": [Function],
        "accumulate": [Function],
        "append": [Function],
        "build_list": [Function],
        "build_stream": [Function],
        "enum_list": [Function],
        "enum_stream": [Function],
        "equal": [Function],
        "eval_stream": [Function],
        "filter": [Function],
        "for_each": [Function],
        "integers_from": [Function],
        "is_stream": [Function],
        "length": [Function],
        "list_ref": [Function],
        "list_to_stream": [Function],
        "list_to_string": [Function],
        "map": [Function],
        "member": [Function],
        "remove": [Function],
        "remove_all": [Function],
        "reverse": [Function],
        "stream_append": [Function],
        "stream_filter": [Function],
        "stream_for_each": [Function],
        "stream_length": [Function],
        "stream_map": [Function],
        "stream_member": [Function],
        "stream_ref": [Function],
        "stream_remove": [Function],
        "stream_remove_all": [Function],
        "stream_reverse": [Function],
        "stream_to_list": [Function],
      },
      "id": "34",
      "name": "programEnvironment",
      "tail": Object {
        "head": Object {
          ":::pre-declared names::": Symbol(),
          "integers_from": [Function],
        },
        "id": "-1",
        "name": "global",
        "tail": null,
      },
    },
  },
}
`;

exports[`EnvVisualizer calculates correct layout for code sample 7 6`] = `
Object {
  "callExpression": Object {
    "arguments": Array [
      Object {
        "loc": undefined,
        "type": "Literal",
        "value": Array [
          1,
          [Function],
        ],
      },
      Object {
        "loc": undefined,
        "type": "Literal",
        "value": 2,
      },
    ],
    "callee": Node {
      "end": 443,
      "loc": SourceLocation {
        "end": Position {
          "column": 15,
          "line": 17,
        },
        "start": Position {
          "column": 4,
          "line": 17,
        },
      },
      "name": "eval_stream",
      "start": 432,
      "type": "Identifier",
    },
    "end": 464,
    "loc": SourceLocation {
      "end": Position {
        "column": 36,
        "line": 17,
      },
      "start": Position {
        "column": 4,
        "line": 17,
      },
    },
    "start": 432,
    "type": "CallExpression",
  },
  "head": Object {
    "n": 2,
    "s": Array [
      1,
      [Function],
    ],
  },
  "id": Any<String>,
  "name": "eval_stream",
  "tail": Object {
    "head": Object {
      "45": [Function],
      "46": [Function],
      "eval_stream": [Function],
      "x": Symbol(Used to implement hoisting),
      "y": Array [
        [Circular],
        Array [
          1,
          [Circular],
          [Circular],
        ],
      ],
    },
    "id": "35",
    "name": "programEnvironment",
    "tail": Object {
      "head": Object {
        "$accumulate": [Function],
        "$append": [Function],
        "$build_list": [Function],
        "$enum_list": [Function],
        "$filter": [Function],
        "$length": [Function],
        "$list_to_string": [Function],
        "$map": [Function],
        "$remove": [Function],
        "$remove_all": [Function],
        "$reverse": [Function],
        "accumulate": [Function],
        "append": [Function],
        "build_list": [Function],
        "build_stream": [Function],
        "enum_list": [Function],
        "enum_stream": [Function],
        "equal": [Function],
        "eval_stream": [Function],
        "filter": [Function],
        "for_each": [Function],
        "integers_from": [Function],
        "is_stream": [Function],
        "length": [Function],
        "list_ref": [Function],
        "list_to_stream": [Function],
        "list_to_string": [Function],
        "map": [Function],
        "member": [Function],
        "remove": [Function],
        "remove_all": [Function],
        "reverse": [Function],
        "stream_append": [Function],
        "stream_filter": [Function],
        "stream_for_each": [Function],
        "stream_length": [Function],
        "stream_map": [Function],
        "stream_member": [Function],
        "stream_ref": [Function],
        "stream_remove": [Function],
        "stream_remove_all": [Function],
        "stream_reverse": [Function],
        "stream_to_list": [Function],
      },
      "id": "34",
      "name": "programEnvironment",
      "tail": Object {
        "head": Object {
          ":::pre-declared names::": Symbol(),
          "integers_from": [Function],
        },
        "id": "-1",
        "name": "global",
        "tail": null,
      },
    },
  },
}
`;

exports[`EnvVisualizer calculates correct layout for code sample 7 7`] = `
Object {
  "head": Object {
    "i": 1,
  },
  "id": Any<String>,
  "name": "forBlockEnvironment",
  "tail": Object {
    "head": Object {
      "i": 5,
    },
    "id": "36",
    "name": "forLoopEnvironment",
    "tail": Object {
      "head": Object {
        "45": [Function],
        "46": [Function],
        "eval_stream": [Function],
        "x": Symbol(Used to implement hoisting),
        "y": Array [
          [Circular],
          Array [
            1,
            [Circular],
            [Circular],
          ],
        ],
      },
      "id": "35",
      "name": "programEnvironment",
      "tail": Object {
        "head": Object {
          "$accumulate": [Function],
          "$append": [Function],
          "$build_list": [Function],
          "$enum_list": [Function],
          "$filter": [Function],
          "$length": [Function],
          "$list_to_string": [Function],
          "$map": [Function],
          "$remove": [Function],
          "$remove_all": [Function],
          "$reverse": [Function],
          "accumulate": [Function],
          "append": [Function],
          "build_list": [Function],
          "build_stream": [Function],
          "enum_list": [Function],
          "enum_stream": [Function],
          "equal": [Function],
          "eval_stream": [Function],
          "filter": [Function],
          "for_each": [Function],
          "integers_from": [Function],
          "is_stream": [Function],
          "length": [Function],
          "list_ref": [Function],
          "list_to_stream": [Function],
          "list_to_string": [Function],
          "map": [Function],
          "member": [Function],
          "remove": [Function],
          "remove_all": [Function],
          "reverse": [Function],
          "stream_append": [Function],
          "stream_filter": [Function],
          "stream_for_each": [Function],
          "stream_length": [Function],
          "stream_map": [Function],
          "stream_member": [Function],
          "stream_ref": [Function],
          "stream_remove": [Function],
          "stream_remove_all": [Function],
          "stream_reverse": [Function],
          "stream_to_list": [Function],
        },
        "id": "34",
        "name": "programEnvironment",
        "tail": Object {
          "head": Object {
            ":::pre-declared names::": Symbol(),
            "integers_from": [Function],
          },
          "id": "-1",
          "name": "global",
          "tail": null,
        },
      },
    },
  },
}
`;

exports[`EnvVisualizer calculates correct layout for code sample 7 8`] = `
Object {
  "head": Object {
    "i": 2,
  },
  "id": Any<String>,
  "name": "forBlockEnvironment",
  "tail": Object {
    "head": Object {
      "i": 5,
    },
    "id": "36",
    "name": "forLoopEnvironment",
    "tail": Object {
      "head": Object {
        "45": [Function],
        "46": [Function],
        "eval_stream": [Function],
        "x": Symbol(Used to implement hoisting),
        "y": Array [
          [Circular],
          Array [
            1,
            [Circular],
            [Circular],
          ],
        ],
      },
      "id": "35",
      "name": "programEnvironment",
      "tail": Object {
        "head": Object {
          "$accumulate": [Function],
          "$append": [Function],
          "$build_list": [Function],
          "$enum_list": [Function],
          "$filter": [Function],
          "$length": [Function],
          "$list_to_string": [Function],
          "$map": [Function],
          "$remove": [Function],
          "$remove_all": [Function],
          "$reverse": [Function],
          "accumulate": [Function],
          "append": [Function],
          "build_list": [Function],
          "build_stream": [Function],
          "enum_list": [Function],
          "enum_stream": [Function],
          "equal": [Function],
          "eval_stream": [Function],
          "filter": [Function],
          "for_each": [Function],
          "integers_from": [Function],
          "is_stream": [Function],
          "length": [Function],
          "list_ref": [Function],
          "list_to_stream": [Function],
          "list_to_string": [Function],
          "map": [Function],
          "member": [Function],
          "remove": [Function],
          "remove_all": [Function],
          "reverse": [Function],
          "stream_append": [Function],
          "stream_filter": [Function],
          "stream_for_each": [Function],
          "stream_length": [Function],
          "stream_map": [Function],
          "stream_member": [Function],
          "stream_ref": [Function],
          "stream_remove": [Function],
          "stream_remove_all": [Function],
          "stream_reverse": [Function],
          "stream_to_list": [Function],
        },
        "id": "34",
        "name": "programEnvironment",
        "tail": Object {
          "head": Object {
            ":::pre-declared names::": Symbol(),
            "integers_from": [Function],
          },
          "id": "-1",
          "name": "global",
          "tail": null,
        },
      },
    },
  },
}
`;

exports[`EnvVisualizer calculates correct layout for code sample 7 9`] = `
Object {
  "head": Object {
    "i": 3,
  },
  "id": Any<String>,
  "name": "forBlockEnvironment",
  "tail": Object {
    "head": Object {
      "i": 5,
    },
    "id": "36",
    "name": "forLoopEnvironment",
    "tail": Object {
      "head": Object {
        "45": [Function],
        "46": [Function],
        "eval_stream": [Function],
        "x": Symbol(Used to implement hoisting),
        "y": Array [
          [Circular],
          Array [
            1,
            [Circular],
            [Circular],
          ],
        ],
      },
      "id": "35",
      "name": "programEnvironment",
      "tail": Object {
        "head": Object {
          "$accumulate": [Function],
          "$append": [Function],
          "$build_list": [Function],
          "$enum_list": [Function],
          "$filter": [Function],
          "$length": [Function],
          "$list_to_string": [Function],
          "$map": [Function],
          "$remove": [Function],
          "$remove_all": [Function],
          "$reverse": [Function],
          "accumulate": [Function],
          "append": [Function],
          "build_list": [Function],
          "build_stream": [Function],
          "enum_list": [Function],
          "enum_stream": [Function],
          "equal": [Function],
          "eval_stream": [Function],
          "filter": [Function],
          "for_each": [Function],
          "integers_from": [Function],
          "is_stream": [Function],
          "length": [Function],
          "list_ref": [Function],
          "list_to_stream": [Function],
          "list_to_string": [Function],
          "map": [Function],
          "member": [Function],
          "remove": [Function],
          "remove_all": [Function],
          "reverse": [Function],
          "stream_append": [Function],
          "stream_filter": [Function],
          "stream_for_each": [Function],
          "stream_length": [Function],
          "stream_map": [Function],
          "stream_member": [Function],
          "stream_ref": [Function],
          "stream_remove": [Function],
          "stream_remove_all": [Function],
          "stream_reverse": [Function],
          "stream_to_list": [Function],
        },
        "id": "34",
        "name": "programEnvironment",
        "tail": Object {
          "head": Object {
            ":::pre-declared names::": Symbol(),
            "integers_from": [Function],
          },
          "id": "-1",
          "name": "global",
          "tail": null,
        },
      },
    },
  },
}
`;

exports[`EnvVisualizer calculates correct layout for code sample 7 10`] = `
Object {
  "head": Object {
    "i": 4,
  },
  "id": Any<String>,
  "name": "forBlockEnvironment",
  "tail": Object {
    "head": Object {
      "i": 5,
    },
    "id": "36",
    "name": "forLoopEnvironment",
    "tail": Object {
      "head": Object {
        "45": [Function],
        "46": [Function],
        "eval_stream": [Function],
        "x": Symbol(Used to implement hoisting),
        "y": Array [
          [Circular],
          Array [
            1,
            [Circular],
            [Circular],
          ],
        ],
      },
      "id": "35",
      "name": "programEnvironment",
      "tail": Object {
        "head": Object {
          "$accumulate": [Function],
          "$append": [Function],
          "$build_list": [Function],
          "$enum_list": [Function],
          "$filter": [Function],
          "$length": [Function],
          "$list_to_string": [Function],
          "$map": [Function],
          "$remove": [Function],
          "$remove_all": [Function],
          "$reverse": [Function],
          "accumulate": [Function],
          "append": [Function],
          "build_list": [Function],
          "build_stream": [Function],
          "enum_list": [Function],
          "enum_stream": [Function],
          "equal": [Function],
          "eval_stream": [Function],
          "filter": [Function],
          "for_each": [Function],
          "integers_from": [Function],
          "is_stream": [Function],
          "length": [Function],
          "list_ref": [Function],
          "list_to_stream": [Function],
          "list_to_string": [Function],
          "map": [Function],
          "member": [Function],
          "remove": [Function],
          "remove_all": [Function],
          "reverse": [Function],
          "stream_append": [Function],
          "stream_filter": [Function],
          "stream_for_each": [Function],
          "stream_length": [Function],
          "stream_map": [Function],
          "stream_member": [Function],
          "stream_ref": [Function],
          "stream_remove": [Function],
          "stream_remove_all": [Function],
          "stream_reverse": [Function],
          "stream_to_list": [Function],
        },
        "id": "34",
        "name": "programEnvironment",
        "tail": Object {
          "head": Object {
            ":::pre-declared names::": Symbol(),
            "integers_from": [Function],
          },
          "id": "-1",
          "name": "global",
          "tail": null,
        },
      },
    },
  },
}
`;

exports[`EnvVisualizer calculates correct layout for code sample 7 11`] = `
Object {
  "head": Object {
    "52": [Function],
    "es": [Function],
  },
  "id": Any<String>,
  "name": "functionBodyEnvironment",
  "tail": Object {
    "callExpression": Object {
      "arguments": Array [
        Object {
          "loc": undefined,
          "type": "Literal",
          "value": Array [
            1,
            [Function],
          ],
        },
        Object {
          "loc": undefined,
          "type": "Literal",
          "value": 2,
        },
      ],
      "callee": Node {
        "end": 443,
        "loc": SourceLocation {
          "end": Position {
            "column": 15,
            "line": 17,
          },
          "start": Position {
            "column": 4,
            "line": 17,
          },
        },
        "name": "eval_stream",
        "start": 432,
        "type": "Identifier",
      },
      "end": 464,
      "loc": SourceLocation {
        "end": Position {
          "column": 36,
          "line": 17,
        },
        "start": Position {
          "column": 4,
          "line": 17,
        },
      },
      "start": 432,
      "type": "CallExpression",
    },
    "head": Object {
      "n": 2,
      "s": Array [
        1,
        [Function],
      ],
    },
    "id": "50",
    "name": "eval_stream",
    "tail": Object {
      "head": Object {
        "45": [Function],
        "46": [Function],
        "eval_stream": [Function],
        "x": Symbol(Used to implement hoisting),
        "y": Array [
          [Circular],
          Array [
            1,
            [Circular],
            [Circular],
          ],
        ],
      },
      "id": "35",
      "name": "programEnvironment",
      "tail": Object {
        "head": Object {
          "$accumulate": [Function],
          "$append": [Function],
          "$build_list": [Function],
          "$enum_list": [Function],
          "$filter": [Function],
          "$length": [Function],
          "$list_to_string": [Function],
          "$map": [Function],
          "$remove": [Function],
          "$remove_all": [Function],
          "$reverse": [Function],
          "accumulate": [Function],
          "append": [Function],
          "build_list": [Function],
          "build_stream": [Function],
          "enum_list": [Function],
          "enum_stream": [Function],
          "equal": [Function],
          "eval_stream": [Function],
          "filter": [Function],
          "for_each": [Function],
          "integers_from": [Function],
          "is_stream": [Function],
          "length": [Function],
          "list_ref": [Function],
          "list_to_stream": [Function],
          "list_to_string": [Function],
          "map": [Function],
          "member": [Function],
          "remove": [Function],
          "remove_all": [Function],
          "reverse": [Function],
          "stream_append": [Function],
          "stream_filter": [Function],
          "stream_for_each": [Function],
          "stream_length": [Function],
          "stream_map": [Function],
          "stream_member": [Function],
          "stream_ref": [Function],
          "stream_remove": [Function],
          "stream_remove_all": [Function],
          "stream_reverse": [Function],
          "stream_to_list": [Function],
        },
        "id": "34",
        "name": "programEnvironment",
        "tail": Object {
          "head": Object {
            ":::pre-declared names::": Symbol(),
            "integers_from": [Function],
          },
          "id": "-1",
          "name": "global",
          "tail": null,
        },
      },
    },
  },
  "thisContext": undefined,
}
`;

exports[`EnvVisualizer calculates correct layout for code sample 7 12`] = `
Object {
  "head": Object {
    "x": Array [
      Array [],
    ],
  },
  "id": Any<String>,
  "name": "blockEnvironment",
  "tail": Object {
    "head": Object {
      "i": 1,
    },
    "id": "37",
    "name": "forBlockEnvironment",
    "tail": Object {
      "head": Object {
        "i": 5,
      },
      "id": "36",
      "name": "forLoopEnvironment",
      "tail": Object {
        "head": Object {
          "45": [Function],
          "46": [Function],
          "eval_stream": [Function],
          "x": Symbol(Used to implement hoisting),
          "y": Array [
            [Circular],
            Array [
              1,
              [Circular],
              [Circular],
            ],
          ],
        },
        "id": "35",
        "name": "programEnvironment",
        "tail": Object {
          "head": Object {
            "$accumulate": [Function],
            "$append": [Function],
            "$build_list": [Function],
            "$enum_list": [Function],
            "$filter": [Function],
            "$length": [Function],
            "$list_to_string": [Function],
            "$map": [Function],
            "$remove": [Function],
            "$remove_all": [Function],
            "$reverse": [Function],
            "accumulate": [Function],
            "append": [Function],
            "build_list": [Function],
            "build_stream": [Function],
            "enum_list": [Function],
            "enum_stream": [Function],
            "equal": [Function],
            "eval_stream": [Function],
            "filter": [Function],
            "for_each": [Function],
            "integers_from": [Function],
            "is_stream": [Function],
            "length": [Function],
            "list_ref": [Function],
            "list_to_stream": [Function],
            "list_to_string": [Function],
            "map": [Function],
            "member": [Function],
            "remove": [Function],
            "remove_all": [Function],
            "reverse": [Function],
            "stream_append": [Function],
            "stream_filter": [Function],
            "stream_for_each": [Function],
            "stream_length": [Function],
            "stream_map": [Function],
            "stream_member": [Function],
            "stream_ref": [Function],
            "stream_remove": [Function],
            "stream_remove_all": [Function],
            "stream_reverse": [Function],
            "stream_to_list": [Function],
          },
          "id": "34",
          "name": "programEnvironment",
          "tail": Object {
            "head": Object {
              ":::pre-declared names::": Symbol(),
              "integers_from": [Function],
            },
            "id": "-1",
            "name": "global",
            "tail": null,
          },
        },
      },
    },
  },
}
`;

exports[`EnvVisualizer calculates correct layout for code sample 7 13`] = `
Object {
  "head": Object {
    "x": Array [
      Array [],
    ],
  },
  "id": Any<String>,
  "name": "blockEnvironment",
  "tail": Object {
    "head": Object {
      "i": 2,
    },
    "id": "39",
    "name": "forBlockEnvironment",
    "tail": Object {
      "head": Object {
        "i": 5,
      },
      "id": "36",
      "name": "forLoopEnvironment",
      "tail": Object {
        "head": Object {
          "45": [Function],
          "46": [Function],
          "eval_stream": [Function],
          "x": Symbol(Used to implement hoisting),
          "y": Array [
            [Circular],
            Array [
              1,
              [Circular],
              [Circular],
            ],
          ],
        },
        "id": "35",
        "name": "programEnvironment",
        "tail": Object {
          "head": Object {
            "$accumulate": [Function],
            "$append": [Function],
            "$build_list": [Function],
            "$enum_list": [Function],
            "$filter": [Function],
            "$length": [Function],
            "$list_to_string": [Function],
            "$map": [Function],
            "$remove": [Function],
            "$remove_all": [Function],
            "$reverse": [Function],
            "accumulate": [Function],
            "append": [Function],
            "build_list": [Function],
            "build_stream": [Function],
            "enum_list": [Function],
            "enum_stream": [Function],
            "equal": [Function],
            "eval_stream": [Function],
            "filter": [Function],
            "for_each": [Function],
            "integers_from": [Function],
            "is_stream": [Function],
            "length": [Function],
            "list_ref": [Function],
            "list_to_stream": [Function],
            "list_to_string": [Function],
            "map": [Function],
            "member": [Function],
            "remove": [Function],
            "remove_all": [Function],
            "reverse": [Function],
            "stream_append": [Function],
            "stream_filter": [Function],
            "stream_for_each": [Function],
            "stream_length": [Function],
            "stream_map": [Function],
            "stream_member": [Function],
            "stream_ref": [Function],
            "stream_remove": [Function],
            "stream_remove_all": [Function],
            "stream_reverse": [Function],
            "stream_to_list": [Function],
          },
          "id": "34",
          "name": "programEnvironment",
          "tail": Object {
            "head": Object {
              ":::pre-declared names::": Symbol(),
              "integers_from": [Function],
            },
            "id": "-1",
            "name": "global",
            "tail": null,
          },
        },
      },
    },
  },
}
`;

exports[`EnvVisualizer calculates correct layout for code sample 7 14`] = `
Object {
  "head": Object {
    "x": Array [
      Array [],
    ],
  },
  "id": Any<String>,
  "name": "blockEnvironment",
  "tail": Object {
    "head": Object {
      "i": 3,
    },
    "id": "41",
    "name": "forBlockEnvironment",
    "tail": Object {
      "head": Object {
        "i": 5,
      },
      "id": "36",
      "name": "forLoopEnvironment",
      "tail": Object {
        "head": Object {
          "45": [Function],
          "46": [Function],
          "eval_stream": [Function],
          "x": Symbol(Used to implement hoisting),
          "y": Array [
            [Circular],
            Array [
              1,
              [Circular],
              [Circular],
            ],
          ],
        },
        "id": "35",
        "name": "programEnvironment",
        "tail": Object {
          "head": Object {
            "$accumulate": [Function],
            "$append": [Function],
            "$build_list": [Function],
            "$enum_list": [Function],
            "$filter": [Function],
            "$length": [Function],
            "$list_to_string": [Function],
            "$map": [Function],
            "$remove": [Function],
            "$remove_all": [Function],
            "$reverse": [Function],
            "accumulate": [Function],
            "append": [Function],
            "build_list": [Function],
            "build_stream": [Function],
            "enum_list": [Function],
            "enum_stream": [Function],
            "equal": [Function],
            "eval_stream": [Function],
            "filter": [Function],
            "for_each": [Function],
            "integers_from": [Function],
            "is_stream": [Function],
            "length": [Function],
            "list_ref": [Function],
            "list_to_stream": [Function],
            "list_to_string": [Function],
            "map": [Function],
            "member": [Function],
            "remove": [Function],
            "remove_all": [Function],
            "reverse": [Function],
            "stream_append": [Function],
            "stream_filter": [Function],
            "stream_for_each": [Function],
            "stream_length": [Function],
            "stream_map": [Function],
            "stream_member": [Function],
            "stream_ref": [Function],
            "stream_remove": [Function],
            "stream_remove_all": [Function],
            "stream_reverse": [Function],
            "stream_to_list": [Function],
          },
          "id": "34",
          "name": "programEnvironment",
          "tail": Object {
            "head": Object {
              ":::pre-declared names::": Symbol(),
              "integers_from": [Function],
            },
            "id": "-1",
            "name": "global",
            "tail": null,
          },
        },
      },
    },
  },
}
`;

exports[`EnvVisualizer calculates correct layout for code sample 7 15`] = `
Object {
  "head": Object {
    "x": Array [
      Array [],
    ],
  },
  "id": Any<String>,
  "name": "blockEnvironment",
  "tail": Object {
    "head": Object {
      "i": 4,
    },
    "id": "43",
    "name": "forBlockEnvironment",
    "tail": Object {
      "head": Object {
        "i": 5,
      },
      "id": "36",
      "name": "forLoopEnvironment",
      "tail": Object {
        "head": Object {
          "45": [Function],
          "46": [Function],
          "eval_stream": [Function],
          "x": Symbol(Used to implement hoisting),
          "y": Array [
            [Circular],
            Array [
              1,
              [Circular],
              [Circular],
            ],
          ],
        },
        "id": "35",
        "name": "programEnvironment",
        "tail": Object {
          "head": Object {
            "$accumulate": [Function],
            "$append": [Function],
            "$build_list": [Function],
            "$enum_list": [Function],
            "$filter": [Function],
            "$length": [Function],
            "$list_to_string": [Function],
            "$map": [Function],
            "$remove": [Function],
            "$remove_all": [Function],
            "$reverse": [Function],
            "accumulate": [Function],
            "append": [Function],
            "build_list": [Function],
            "build_stream": [Function],
            "enum_list": [Function],
            "enum_stream": [Function],
            "equal": [Function],
            "eval_stream": [Function],
            "filter": [Function],
            "for_each": [Function],
            "integers_from": [Function],
            "is_stream": [Function],
            "length": [Function],
            "list_ref": [Function],
            "list_to_stream": [Function],
            "list_to_string": [Function],
            "map": [Function],
            "member": [Function],
            "remove": [Function],
            "remove_all": [Function],
            "reverse": [Function],
            "stream_append": [Function],
            "stream_filter": [Function],
            "stream_for_each": [Function],
            "stream_length": [Function],
            "stream_map": [Function],
            "stream_member": [Function],
            "stream_ref": [Function],
            "stream_remove": [Function],
            "stream_remove_all": [Function],
            "stream_reverse": [Function],
            "stream_to_list": [Function],
          },
          "id": "34",
          "name": "programEnvironment",
          "tail": Object {
            "head": Object {
              ":::pre-declared names::": Symbol(),
              "integers_from": [Function],
            },
            "id": "-1",
            "name": "global",
            "tail": null,
          },
        },
      },
    },
  },
}
`;

exports[`EnvVisualizer calculates correct layout for code sample 7 16`] = `
Object {
  "callExpression": Object {
    "arguments": Array [
      Object {
        "loc": undefined,
        "type": "Literal",
        "value": Array [
          1,
          [Function],
        ],
      },
      Object {
        "loc": undefined,
        "type": "Literal",
        "value": 2,
      },
    ],
    "callee": Node {
      "end": 414,
      "loc": SourceLocation {
        "end": Position {
          "column": 34,
          "line": 15,
        },
        "start": Position {
          "column": 32,
          "line": 15,
        },
      },
      "name": "es",
      "start": 412,
      "type": "Identifier",
    },
    "end": 420,
    "loc": SourceLocation {
      "end": Position {
        "column": 40,
        "line": 15,
      },
      "start": Position {
        "column": 32,
        "line": 15,
      },
    },
    "start": 412,
    "type": "CallExpression",
  },
  "head": Object {
    "n": 2,
    "s": Array [
      1,
      [Function],
    ],
  },
  "id": Any<String>,
  "name": "es",
  "tail": Object {
    "head": Object {
      "52": [Function],
      "es": [Function],
    },
    "id": "51",
    "name": "functionBodyEnvironment",
    "tail": Object {
      "callExpression": Object {
        "arguments": Array [
          Object {
            "loc": undefined,
            "type": "Literal",
            "value": Array [
              1,
              [Function],
            ],
          },
          Object {
            "loc": undefined,
            "type": "Literal",
            "value": 2,
          },
        ],
        "callee": Node {
          "end": 443,
          "loc": SourceLocation {
            "end": Position {
              "column": 15,
              "line": 17,
            },
            "start": Position {
              "column": 4,
              "line": 17,
            },
          },
          "name": "eval_stream",
          "start": 432,
          "type": "Identifier",
        },
        "end": 464,
        "loc": SourceLocation {
          "end": Position {
            "column": 36,
            "line": 17,
          },
          "start": Position {
            "column": 4,
            "line": 17,
          },
        },
        "start": 432,
        "type": "CallExpression",
      },
      "head": Object {
        "n": 2,
        "s": Array [
          1,
          [Function],
        ],
      },
      "id": "50",
      "name": "eval_stream",
      "tail": Object {
        "head": Object {
          "45": [Function],
          "46": [Function],
          "eval_stream": [Function],
          "x": Symbol(Used to implement hoisting),
          "y": Array [
            [Circular],
            Array [
              1,
              [Circular],
              [Circular],
            ],
          ],
        },
        "id": "35",
        "name": "programEnvironment",
        "tail": Object {
          "head": Object {
            "$accumulate": [Function],
            "$append": [Function],
            "$build_list": [Function],
            "$enum_list": [Function],
            "$filter": [Function],
            "$length": [Function],
            "$list_to_string": [Function],
            "$map": [Function],
            "$remove": [Function],
            "$remove_all": [Function],
            "$reverse": [Function],
            "accumulate": [Function],
            "append": [Function],
            "build_list": [Function],
            "build_stream": [Function],
            "enum_list": [Function],
            "enum_stream": [Function],
            "equal": [Function],
            "eval_stream": [Function],
            "filter": [Function],
            "for_each": [Function],
            "integers_from": [Function],
            "is_stream": [Function],
            "length": [Function],
            "list_ref": [Function],
            "list_to_stream": [Function],
            "list_to_string": [Function],
            "map": [Function],
            "member": [Function],
            "remove": [Function],
            "remove_all": [Function],
            "reverse": [Function],
            "stream_append": [Function],
            "stream_filter": [Function],
            "stream_for_each": [Function],
            "stream_length": [Function],
            "stream_map": [Function],
            "stream_member": [Function],
            "stream_ref": [Function],
            "stream_remove": [Function],
            "stream_remove_all": [Function],
            "stream_reverse": [Function],
            "stream_to_list": [Function],
          },
          "id": "34",
          "name": "programEnvironment",
          "tail": Object {
            "head": Object {
              ":::pre-declared names::": Symbol(),
              "integers_from": [Function],
            },
            "id": "-1",
            "name": "global",
            "tail": null,
          },
        },
      },
    },
    "thisContext": undefined,
  },
}
`;

exports[`EnvVisualizer calculates correct layout for code sample 7 17`] = `
Object {
  "callExpression": Object {
    "arguments": Array [
      Object {
        "loc": undefined,
        "type": "Literal",
        "value": Array [
          2,
          [Function],
        ],
      },
      Object {
        "loc": undefined,
        "type": "Literal",
        "value": 1,
      },
    ],
    "callee": Node {
      "end": 344,
      "loc": SourceLocation {
        "end": Position {
          "column": 61,
          "line": 13,
        },
        "start": Position {
          "column": 59,
          "line": 13,
        },
      },
      "name": "es",
      "start": 342,
      "type": "Identifier",
    },
    "end": 367,
    "loc": SourceLocation {
      "end": Position {
        "column": 84,
        "line": 13,
      },
      "start": Position {
        "column": 59,
        "line": 13,
      },
    },
    "start": 342,
    "type": "CallExpression",
  },
  "head": Object {
    "n": 1,
    "s": Array [
      2,
      [Function],
    ],
  },
  "id": Any<String>,
  "name": "es",
  "tail": Object {
    "head": Object {
      "52": [Function],
      "es": [Function],
    },
    "id": "51",
    "name": "functionBodyEnvironment",
    "tail": Object {
      "callExpression": Object {
        "arguments": Array [
          Object {
            "loc": undefined,
            "type": "Literal",
            "value": Array [
              1,
              [Function],
            ],
          },
          Object {
            "loc": undefined,
            "type": "Literal",
            "value": 2,
          },
        ],
        "callee": Node {
          "end": 443,
          "loc": SourceLocation {
            "end": Position {
              "column": 15,
              "line": 17,
            },
            "start": Position {
              "column": 4,
              "line": 17,
            },
          },
          "name": "eval_stream",
          "start": 432,
          "type": "Identifier",
        },
        "end": 464,
        "loc": SourceLocation {
          "end": Position {
            "column": 36,
            "line": 17,
          },
          "start": Position {
            "column": 4,
            "line": 17,
          },
        },
        "start": 432,
        "type": "CallExpression",
      },
      "head": Object {
        "n": 2,
        "s": Array [
          1,
          [Function],
        ],
      },
      "id": "50",
      "name": "eval_stream",
      "tail": Object {
        "head": Object {
          "45": [Function],
          "46": [Function],
          "eval_stream": [Function],
          "x": Symbol(Used to implement hoisting),
          "y": Array [
            [Circular],
            Array [
              1,
              [Circular],
              [Circular],
            ],
          ],
        },
        "id": "35",
        "name": "programEnvironment",
        "tail": Object {
          "head": Object {
            "$accumulate": [Function],
            "$append": [Function],
            "$build_list": [Function],
            "$enum_list": [Function],
            "$filter": [Function],
            "$length": [Function],
            "$list_to_string": [Function],
            "$map": [Function],
            "$remove": [Function],
            "$remove_all": [Function],
            "$reverse": [Function],
            "accumulate": [Function],
            "append": [Function],
            "build_list": [Function],
            "build_stream": [Function],
            "enum_list": [Function],
            "enum_stream": [Function],
            "equal": [Function],
            "eval_stream": [Function],
            "filter": [Function],
            "for_each": [Function],
            "integers_from": [Function],
            "is_stream": [Function],
            "length": [Function],
            "list_ref": [Function],
            "list_to_stream": [Function],
            "list_to_string": [Function],
            "map": [Function],
            "member": [Function],
            "remove": [Function],
            "remove_all": [Function],
            "reverse": [Function],
            "stream_append": [Function],
            "stream_filter": [Function],
            "stream_for_each": [Function],
            "stream_length": [Function],
            "stream_map": [Function],
            "stream_member": [Function],
            "stream_ref": [Function],
            "stream_remove": [Function],
            "stream_remove_all": [Function],
            "stream_reverse": [Function],
            "stream_to_list": [Function],
          },
          "id": "34",
          "name": "programEnvironment",
          "tail": Object {
            "head": Object {
              ":::pre-declared names::": Symbol(),
              "integers_from": [Function],
            },
            "id": "-1",
            "name": "global",
            "tail": null,
          },
        },
      },
    },
    "thisContext": undefined,
  },
}
`;

exports[`EnvVisualizer calculates correct layout for code sample 7 18`] = `
Object {
  "head": Object {
    "55": [Function],
    "z": Array [
      Array [
        [Circular],
        Array [
          1,
          [Circular],
          [Circular],
        ],
      ],
    ],
  },
  "id": Any<String>,
  "name": "functionBodyEnvironment",
  "tail": Object {
    "callExpression": Object {
      "arguments": Array [
        Object {
          "loc": undefined,
          "type": "Literal",
          "value": Array [
            1,
            [Function],
          ],
        },
        Object {
          "loc": undefined,
          "type": "Literal",
          "value": 2,
        },
      ],
      "callee": Node {
        "end": 414,
        "loc": SourceLocation {
          "end": Position {
            "column": 34,
            "line": 15,
          },
          "start": Position {
            "column": 32,
            "line": 15,
          },
        },
        "name": "es",
        "start": 412,
        "type": "Identifier",
      },
      "end": 420,
      "loc": SourceLocation {
        "end": Position {
          "column": 40,
          "line": 15,
        },
        "start": Position {
          "column": 32,
          "line": 15,
        },
      },
      "start": 412,
      "type": "CallExpression",
    },
    "head": Object {
      "n": 2,
      "s": Array [
        1,
        [Function],
      ],
    },
    "id": "53",
    "name": "es",
    "tail": Object {
      "head": Object {
        "52": [Function],
        "es": [Function],
      },
      "id": "51",
      "name": "functionBodyEnvironment",
      "tail": Object {
        "callExpression": Object {
          "arguments": Array [
            Object {
              "loc": undefined,
              "type": "Literal",
              "value": Array [
                1,
                [Function],
              ],
            },
            Object {
              "loc": undefined,
              "type": "Literal",
              "value": 2,
            },
          ],
          "callee": Node {
            "end": 443,
            "loc": SourceLocation {
              "end": Position {
                "column": 15,
                "line": 17,
              },
              "start": Position {
                "column": 4,
                "line": 17,
              },
            },
            "name": "eval_stream",
            "start": 432,
            "type": "Identifier",
          },
          "end": 464,
          "loc": SourceLocation {
            "end": Position {
              "column": 36,
              "line": 17,
            },
            "start": Position {
              "column": 4,
              "line": 17,
            },
          },
          "start": 432,
          "type": "CallExpression",
        },
        "head": Object {
          "n": 2,
          "s": Array [
            1,
            [Function],
          ],
        },
        "id": "50",
        "name": "eval_stream",
        "tail": Object {
          "head": Object {
            "45": [Function],
            "46": [Function],
            "eval_stream": [Function],
            "x": Symbol(Used to implement hoisting),
            "y": Array [
              [Circular],
              Array [
                1,
                [Circular],
                [Circular],
              ],
            ],
          },
          "id": "35",
          "name": "programEnvironment",
          "tail": Object {
            "head": Object {
              "$accumulate": [Function],
              "$append": [Function],
              "$build_list": [Function],
              "$enum_list": [Function],
              "$filter": [Function],
              "$length": [Function],
              "$list_to_string": [Function],
              "$map": [Function],
              "$remove": [Function],
              "$remove_all": [Function],
              "$reverse": [Function],
              "accumulate": [Function],
              "append": [Function],
              "build_list": [Function],
              "build_stream": [Function],
              "enum_list": [Function],
              "enum_stream": [Function],
              "equal": [Function],
              "eval_stream": [Function],
              "filter": [Function],
              "for_each": [Function],
              "integers_from": [Function],
              "is_stream": [Function],
              "length": [Function],
              "list_ref": [Function],
              "list_to_stream": [Function],
              "list_to_string": [Function],
              "map": [Function],
              "member": [Function],
              "remove": [Function],
              "remove_all": [Function],
              "reverse": [Function],
              "stream_append": [Function],
              "stream_filter": [Function],
              "stream_for_each": [Function],
              "stream_length": [Function],
              "stream_map": [Function],
              "stream_member": [Function],
              "stream_ref": [Function],
              "stream_remove": [Function],
              "stream_remove_all": [Function],
              "stream_reverse": [Function],
              "stream_to_list": [Function],
            },
            "id": "34",
            "name": "programEnvironment",
            "tail": Object {
              "head": Object {
                ":::pre-declared names::": Symbol(),
                "integers_from": [Function],
              },
              "id": "-1",
              "name": "global",
              "tail": null,
            },
          },
        },
      },
      "thisContext": undefined,
    },
  },
  "thisContext": undefined,
}
`;

exports[`EnvVisualizer calculates correct layout for code sample 7 19`] = `
Object {
  "head": Object {
    "z": Symbol(Used to implement hoisting),
  },
  "id": Any<String>,
  "name": "functionBodyEnvironment",
  "tail": Object {
    "callExpression": Object {
      "arguments": Array [
        Object {
          "loc": undefined,
          "type": "Literal",
          "value": Array [
            2,
            [Function],
          ],
        },
        Object {
          "loc": undefined,
          "type": "Literal",
          "value": 1,
        },
      ],
      "callee": Node {
        "end": 344,
        "loc": SourceLocation {
          "end": Position {
            "column": 61,
            "line": 13,
          },
          "start": Position {
            "column": 59,
            "line": 13,
          },
        },
        "name": "es",
        "start": 342,
        "type": "Identifier",
      },
      "end": 367,
      "loc": SourceLocation {
        "end": Position {
          "column": 84,
          "line": 13,
        },
        "start": Position {
          "column": 59,
          "line": 13,
        },
      },
      "start": 342,
      "type": "CallExpression",
    },
    "head": Object {
      "n": 1,
      "s": Array [
        2,
        [Function],
      ],
    },
    "id": "62",
    "name": "es",
    "tail": Object {
      "head": Object {
        "52": [Function],
        "es": [Function],
      },
      "id": "51",
      "name": "functionBodyEnvironment",
      "tail": Object {
        "callExpression": Object {
          "arguments": Array [
            Object {
              "loc": undefined,
              "type": "Literal",
              "value": Array [
                1,
                [Function],
              ],
            },
            Object {
              "loc": undefined,
              "type": "Literal",
              "value": 2,
            },
          ],
          "callee": Node {
            "end": 443,
            "loc": SourceLocation {
              "end": Position {
                "column": 15,
                "line": 17,
              },
              "start": Position {
                "column": 4,
                "line": 17,
              },
            },
            "name": "eval_stream",
            "start": 432,
            "type": "Identifier",
          },
          "end": 464,
          "loc": SourceLocation {
            "end": Position {
              "column": 36,
              "line": 17,
            },
            "start": Position {
              "column": 4,
              "line": 17,
            },
          },
          "start": 432,
          "type": "CallExpression",
        },
        "head": Object {
          "n": 2,
          "s": Array [
            1,
            [Function],
          ],
        },
        "id": "50",
        "name": "eval_stream",
        "tail": Object {
          "head": Object {
            "45": [Function],
            "46": [Function],
            "eval_stream": [Function],
            "x": Symbol(Used to implement hoisting),
            "y": Array [
              [Circular],
              Array [
                1,
                [Circular],
                [Circular],
              ],
            ],
          },
          "id": "35",
          "name": "programEnvironment",
          "tail": Object {
            "head": Object {
              "$accumulate": [Function],
              "$append": [Function],
              "$build_list": [Function],
              "$enum_list": [Function],
              "$filter": [Function],
              "$length": [Function],
              "$list_to_string": [Function],
              "$map": [Function],
              "$remove": [Function],
              "$remove_all": [Function],
              "$reverse": [Function],
              "accumulate": [Function],
              "append": [Function],
              "build_list": [Function],
              "build_stream": [Function],
              "enum_list": [Function],
              "enum_stream": [Function],
              "equal": [Function],
              "eval_stream": [Function],
              "filter": [Function],
              "for_each": [Function],
              "integers_from": [Function],
              "is_stream": [Function],
              "length": [Function],
              "list_ref": [Function],
              "list_to_stream": [Function],
              "list_to_string": [Function],
              "map": [Function],
              "member": [Function],
              "remove": [Function],
              "remove_all": [Function],
              "reverse": [Function],
              "stream_append": [Function],
              "stream_filter": [Function],
              "stream_for_each": [Function],
              "stream_length": [Function],
              "stream_map": [Function],
              "stream_member": [Function],
              "stream_ref": [Function],
              "stream_remove": [Function],
              "stream_remove_all": [Function],
              "stream_reverse": [Function],
              "stream_to_list": [Function],
            },
            "id": "34",
            "name": "programEnvironment",
            "tail": Object {
              "head": Object {
                ":::pre-declared names::": Symbol(),
                "integers_from": [Function],
              },
              "id": "-1",
              "name": "global",
              "tail": null,
            },
          },
        },
      },
      "thisContext": undefined,
    },
  },
  "thisContext": undefined,
}
`;

exports[`EnvVisualizer calculates correct layout for code sample 7 20`] = `
Array [
  0,
  0,
  ":::pre-declared names::: ",
  Symbol(),
  "integers_from: ",
  [Function],
  0,
  1,
  "y: ",
  Array [
    [Circular],
    Array [
      1,
      [Circular],
      [Circular],
    ],
  ],
  "eval_stream:= ",
  [Function],
  "x: ",
  Symbol(Used to implement hoisting),
  3,
  1,
  "n: ",
  1,
  "49:= ",
  [Function],
  4,
  1,
  "n: ",
  2,
  "61:= ",
  [Function],
  0,
  2,
  "i: ",
  5,
  3,
  2,
  "s: ",
  Array [
    1,
    [Function],
  ],
  "n: ",
  2,
  0,
  3,
  "i:= ",
  1,
  1,
  3,
  "i:= ",
  2,
  2,
  3,
  "i:= ",
  3,
  3,
  3,
  "i:= ",
  4,
  4,
  3,
  "es:= ",
  [Function],
  0,
  4,
  "x:= ",
  Array [
    Array [],
  ],
  1,
  4,
  "x:= ",
  Array [
    Array [],
  ],
  2,
  4,
  "x:= ",
  Array [
    Array [],
  ],
  3,
  4,
  "x:= ",
  Array [
    Array [],
  ],
  4,
  4,
  "s: ",
  Array [
    1,
    [Function],
  ],
  "n: ",
  2,
  5,
  4,
  "s: ",
  Array [
    2,
    [Function],
  ],
  "n: ",
  1,
  4,
  5,
  "z:= ",
  Array [
    Array [
      [Circular],
      Array [
        1,
        [Circular],
        [Circular],
      ],
    ],
  ],
  5,
  5,
  "z: ",
  Symbol(Used to implement hoisting),
]
`;
